# serializer version: 1
# name: test_state[media_player.test_client_1_snapcast_client-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'Test Stream 1',
        'Test Stream 2',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.test_client_1_snapcast_client',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'test_client_1 Snapcast Client',
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.SPEAKER: 'speaker'>,
    'original_icon': None,
    'original_name': 'test_client_1 Snapcast Client',
    'platform': 'snapcast',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 526348>,
    'translation_key': None,
    'unique_id': 'snapcast_client_127.0.0.1:1705_00:21:6a:7d:74:fc#1',
    'unit_of_measurement': None,
  })
# ---
# name: test_state[media_player.test_client_1_snapcast_client-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'speaker',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/media_player_proxy/media_player.test_client_1_snapcast_client?token=mock_token&cache=6e2dee674d9d1dc7',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_client_1 Snapcast Client',
      <MediaPlayerEntityStateAttribute.GROUP_MEMBERS: 'group_members'>: list([
        'media_player.test_client_1_snapcast_client',
      ]),
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_MUTED: 'is_volume_muted'>: False,
      'latency': 6,
      <MediaPlayerEntityStateAttribute.MEDIA_ALBUM_ARTIST: 'media_album_artist'>: 'Test Album Artist 1, Test Album Artist 2',
      <MediaPlayerEntityStateAttribute.MEDIA_ALBUM_NAME: 'media_album_name'>: 'Test Album',
      <MediaPlayerEntityStateAttribute.MEDIA_ARTIST: 'media_artist'>: 'Test Artist 1, Test Artist 2',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_TYPE: 'media_content_type'>: <MediaType.MUSIC: 'music'>,
      <MediaPlayerEntityStateAttribute.MEDIA_DURATION: 'media_duration'>: 60,
      <MediaPlayerEntityStateAttribute.MEDIA_POSITION: 'media_position'>: 30,
      <MediaPlayerEntityStateAttribute.MEDIA_TITLE: 'media_title'>: 'Test Title',
      <MediaPlayerEntityStateAttribute.MEDIA_TRACK: 'media_track'>: 10,
      <MediaPlayerEntityStateAttribute.INPUT_SOURCE: 'source'>: 'test_stream_1',
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'Test Stream 1',
        'Test Stream 2',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 526348>,
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_LEVEL: 'volume_level'>: 0.48,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.test_client_1_snapcast_client',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'playing',
  })
# ---
# name: test_state[media_player.test_client_2_snapcast_client-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'Test Stream 1',
        'Test Stream 2',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.test_client_2_snapcast_client',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'test_client_2 Snapcast Client',
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.SPEAKER: 'speaker'>,
    'original_icon': None,
    'original_name': 'test_client_2 Snapcast Client',
    'platform': 'snapcast',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 526348>,
    'translation_key': None,
    'unique_id': 'snapcast_client_127.0.0.1:1705_00:21:6a:7d:74:fc#2',
    'unit_of_measurement': None,
  })
# ---
# name: test_state[media_player.test_client_2_snapcast_client-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'speaker',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_client_2 Snapcast Client',
      <MediaPlayerEntityStateAttribute.GROUP_MEMBERS: 'group_members'>: list([
        'media_player.test_client_2_snapcast_client',
      ]),
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_MUTED: 'is_volume_muted'>: False,
      'latency': 6,
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_TYPE: 'media_content_type'>: <MediaType.MUSIC: 'music'>,
      <MediaPlayerEntityStateAttribute.INPUT_SOURCE: 'source'>: 'test_stream_2',
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'Test Stream 1',
        'Test Stream 2',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 526348>,
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_LEVEL: 'volume_level'>: 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.test_client_2_snapcast_client',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
